--- a/public/index.css
+++ b/public/index.css
@@ -1,117 +1,116 @@
 .container {
-    max-width: 960px;
-    
+  max-width: 960px;
+  
 
-  }
-  html{
-    scroll-behavior: smooth;
-  }
-  
-  /*
-   * Custom translucent site header
-   */
-  
-  .site-header {
-    background-color: rgba(240, 158, 158, 0.85);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-  }
-  .site-header a {
-    color: rgb(10, 117, 92);
-    transition: ease-in-out color .15s;
-  }
-  .site-header a:hover {
-    color: rgb(245, 157, 157);
-    text-decoration: none;
-  }
-  
-  /*
-   * Dummy devices (replace them with your own or something else entirely!)
-   */
-  
-  .product-device {
-    position: absolute;
-    right: 10%;
-    bottom: -30%;
-    width: 300px;
-    height: 900px;
-    background-color: rgb(150, 243, 157);
-    border-radius: 21px;
-    -webkit-transform: rotate(30deg);
-    transform: rotate(30deg);
-  }
-
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-    .bg-dark {
-      background-color: #f0eb62!important;
-  }
-  }
-
-  
-  .product-device::before {
-    /* position: absolute; */
-    
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: "";
-    background-color: rgba(0, 8, 0, 0.972);
-    border-radius: 5px;
-  }
-  
-  .product-device-2 {
-    top: -25%;
-    right: auto;
-    bottom: 0;
-    left: 5%;
-    background-color: #f0a67b;
-  }
-  .text-white { 
-    color: rgb(252, 115, 10)!important;
 }
-  
-  
-  /*
-   * Extra utilities
-   */
-  
-  .flex-equal > * {
-    -ms-flex: ;
-    flex: 1;
-  }
-  @media (min-width: 768px) {
-    .flex-md-equal > * {
-      -ms-flex: 1;
-      flex: 1;
-      border-radius: 30px;
-    }
-  }
-  
-  .overflow-hidden { overflow: hidden; }
-  #img{
-   
+html{
+  scroll-behavior: smooth;
+}
+
+/*
+ * Custom translucent site header
+ */
+
+.site-header {
+  background-color: rgba(240, 158, 158, 0.85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+.site-header a {
+  color: rgb(10, 117, 92);
+  transition: ease-in-out color .15s;
+}
+.site-header a:hover {
+  color: rgb(245, 157, 157);
+  text-decoration: none;
+}
+
+/*
+ * Dummy devices (replace them with your own or something else entirely!)
+ */
+
+.product-device {
   position: absolute;
-   clip: rect(100px,500px,800px,0px);
-   max-width: 460px; 
-   border-radius: 21px 21px 0 0;
+  right: 10%;
+  bottom: -30%;
+  width: 300px;
+  height: 900px;
+  background-color: rgb(150, 243, 157);
+  border-radius: 21px;
+  -webkit-transform: rotate(30deg);
+  transform: rotate(30deg);
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
-  #img2{
-    max-width: 600px;
+  .bg-dark {
+    background-color: #5f5f56!important;
+}
+}
+
+
+.product-device::before {
+  /* position: absolute; */
+  
+  top: 10%;
+  right: 10px;
+  bottom: 10%;
+  left: 10px;
+  content: "";
+  background-color: rgba(0, 8, 0, 0.972);
+  border-radius: 5px;
+}
+
+.product-device-2 {
+  top: -25%;
+  right: auto;
+  bottom: 0;
+  left: 5%;
+  background-color: #f0a67b;
+}
+.text-white { 
+  color: rgb(252, 115, 10)!important;
+}
+
+
+/*
+ * Extra utilities
+ */
+
+.flex-equal > * {
+  -ms-flex: ;
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .flex-md-equal > * {
+    -ms-flex: 1;
+    flex: 1;
     border-radius: 30px;
-    
   }
+}
+
+.overflow-hidden { overflow: hidden; }
+#img{
  
- 
+position: absolute;
+ clip: rect(100px,500px,800px,0px);
+ max-width: 460px; 
+ border-radius: 21px 21px 0 0;
+}
+#img2{
+  max-width: 600px;
+  border-radius: 30px;
+  
+}
+
